// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputList> renders 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={undefined}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputList> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={false}
      keyboardType="default"
      multiline={false}
      numberOfLines={undefined}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#f4f4f4",
            "color": "#cccccc",
          },
          false,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputList> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={undefined}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          Object {
            "borderColor": "#ef5160",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          false,
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          Object {
            "fontSize": 12,
            "lineHeight": 14.399999999999999,
          },
          false,
          false,
          false,
          false,
          Object {
            "color": "#9b9b9b",
          },
          false,
          false,
          Object {
            "color": "#ef5160",
            "marginVertical": 2.5,
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
</View>
`;

exports[`<InputList> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={undefined}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={undefined}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        Object {
          "fontSize": 12,
          "lineHeight": 14.399999999999999,
        },
        false,
        false,
        false,
        false,
        Object {
          "color": "#9b9b9b",
        },
        false,
        false,
        Object {
          "marginVertical": 2.5,
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`<InputList> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={undefined}
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          false,
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          Object {
            "fontSize": 12,
            "lineHeight": 14.399999999999999,
          },
          false,
          false,
          false,
          false,
          Object {
            "color": "#9b9b9b",
          },
          false,
          false,
          Object {
            "marginVertical": 2.5,
          },
        ]
      }
    >
      Hello World
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={undefined}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputList> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
      },
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={undefined}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputList> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
          "minHeight": undefined,
        },
        Object {
          "marginBottom": 0,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      numberOfLines={undefined}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#dbdbdb",
          "borderRadius": 2.5,
          "borderTopWidth": 0,
          "borderWidth": 1,
        },
        undefined,
        false,
      ]
    }
  >
    <View
      pointerEvents={undefined}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingLeft": 10,
          "paddingVertical": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={undefined}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            false,
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            false,
            Object {
              "fontSize": 14,
              "lineHeight": 16.8,
            },
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        one
      </Text>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 3,
            "marginHorizontal": 5,
            "opacity": 0.25,
            "transform": Array [
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "borderRadius": 3,
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              Object {
                "height": 45,
                "minWidth": 45,
                "paddingHorizontal": 30,
              },
              Object {
                "height": 30,
                "minWidth": 30,
                "paddingHorizontal": 15,
              },
              false,
              false,
              Object {
                "paddingHorizontal": 0,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              false,
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={1}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "height": 20,
                  "width": 20,
                },
                undefined,
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      pointerEvents={undefined}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingLeft": 10,
          "paddingVertical": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={undefined}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            false,
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            false,
            Object {
              "fontSize": 14,
              "lineHeight": 16.8,
            },
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        two
      </Text>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 3,
            "marginHorizontal": 5,
            "opacity": 0.25,
            "transform": Array [
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "borderRadius": 3,
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              Object {
                "height": 45,
                "minWidth": 45,
                "paddingHorizontal": 30,
              },
              Object {
                "height": 30,
                "minWidth": 30,
                "paddingHorizontal": 15,
              },
              false,
              false,
              Object {
                "paddingHorizontal": 0,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              false,
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={1}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "height": 20,
                  "width": 20,
                },
                undefined,
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      pointerEvents={undefined}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingLeft": 10,
          "paddingVertical": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={undefined}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            false,
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            false,
            Object {
              "fontSize": 14,
              "lineHeight": 16.8,
            },
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        three
      </Text>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 3,
            "marginHorizontal": 5,
            "opacity": 0.25,
            "transform": Array [
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "borderRadius": 3,
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              Object {
                "height": 45,
                "minWidth": 45,
                "paddingHorizontal": 30,
              },
              Object {
                "height": 30,
                "minWidth": 30,
                "paddingHorizontal": 15,
              },
              false,
              false,
              Object {
                "paddingHorizontal": 0,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              false,
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={1}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "height": 20,
                  "width": 20,
                },
                undefined,
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      pointerEvents={undefined}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingLeft": 10,
          "paddingVertical": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={undefined}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            false,
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            false,
            Object {
              "fontSize": 14,
              "lineHeight": 16.8,
            },
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        four
      </Text>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 3,
            "marginHorizontal": 5,
            "opacity": 0.25,
            "transform": Array [
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "borderRadius": 3,
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              Object {
                "height": 45,
                "minWidth": 45,
                "paddingHorizontal": 30,
              },
              Object {
                "height": 30,
                "minWidth": 30,
                "paddingHorizontal": 15,
              },
              false,
              false,
              Object {
                "paddingHorizontal": 0,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              false,
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={1}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "height": 20,
                  "width": 20,
                },
                undefined,
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      pointerEvents={undefined}
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingLeft": 10,
          "paddingVertical": 5,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={undefined}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            false,
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            false,
            Object {
              "fontSize": 14,
              "lineHeight": 16.8,
            },
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        five
      </Text>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderRadius": 3,
            "marginHorizontal": 5,
            "opacity": 0.25,
            "transform": Array [
              Object {
                "scale": 0.75,
              },
            ],
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "borderRadius": 3,
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              Object {
                "height": 45,
                "minWidth": 45,
                "paddingHorizontal": 30,
              },
              Object {
                "height": 30,
                "minWidth": 30,
                "paddingHorizontal": 15,
              },
              false,
              false,
              Object {
                "paddingHorizontal": 0,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              false,
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={1}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "height": 20,
                  "width": 20,
                },
                undefined,
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
